Añadí el menú con los estilos y la animación

--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
                     <img class="navbar__name--logo" src="./assets/icons/Logo.svg" alt="Logo">
                     <p class="navbar__name--title"> Jeisson Fonseca</p>
                 </a>
+                <nav class="navbar__menu">
+                    <ul class="navbar__menu--list">
+                        <li class="navbar__menu--list-item">
+                            <a href="">Home</a>
+                        </li>
+                        <li class="navbar__menu--list-item">
+                            <a href="">About</a>
+                        </li>
+                        <li class="navbar__menu--list-item">
+                            <a href="">Portfolio</a>
+                        </li>
+                        <li class="navbar__menu--list-item">
+                            <a href="">Blog</a>
+                        </li>
+                        <li class="navbar__menu--list-item">
+                            <a href="#">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <nav class="navbar__menu">
-                <ul class="navbar__menu--list">
-                    <li class="navbar__menu--list-item">
-                        <a href=""></a>
-                    </li>
-                    <li class="navbar__menu--list-item">
-                        <a href=""></a>
-                    </li>
-                    <li class="navbar__menu--list-item">
-                        <a href=""></a>
-                    </li>
-                    <li class="navbar__menu--list-item">
-                        <a href=""></a>
-                    </li>
-                    <li class="navbar__menu--list-item">
-                        <a href="#"></a>
-                    </li>
-                </ul>
-            </nav>
         </div>
         <div>
             <img class="avatar" src="./assets/icons/CuteAvatar.svg" alt="Avatar">
