--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                 <nav class="navbar__menu">
                     <ul class="navbar__menu--list">
                         <li class="navbar__menu--list-item">
-                            <a href="">Home</a>
+                            <a href="#">Home</a>
                         </li>
                         <li class="navbar__menu--list-item">
-                            <a href="">About</a>
+                            <a href="#">About</a>
                         </li>
                         <li class="navbar__menu--list-item">
-                            <a href="">Portfolio</a>
+                            <a href="#">Portfolio</a>
                         </li>
                         <li class="navbar__menu--list-item">
-                            <a href="">Blog</a>
+                            <a href="#">Blog</a>
                         </li>
                         <li class="navbar__menu--list-item">
                             <a href="#">Contact</a>
