Centré el avatar, el título y la frase. Agrrgué los estilos a los textos del header.

--- a/index.html
+++ b/index.html
@@ -47,24 +47,24 @@
                 </nav>
             </div>
         </div>
-        <div>
-            <img class="avatar" src="./assets/icons/CuteAvatar.svg" alt="Avatar">
-            <h1>Frontend Developer</h1>
-            <p>"Less fear, more attitude" - "Menos miedo, más actitud"</p>
-            <ul>
-                <li>
+        <div class="presentation">
+            <img class="presentation__avatar" src="./assets/icons/CuteAvatar.svg" alt="Avatar">
+            <h1 class="presentation__title">Frontend Developer</h1>
+            <p class="presentation__phrase">"Less fear, more attitude" - "Menos miedo, más actitud"</p>
+            <ul class="presentation__rrss">
+                <li class="presentation__rrss--item">
                     <a href=""><img src="" alt=""></a>
                 </li>
-                <li>
+                <li class="presentation__rrss--item">
                     <a href=""><img src="" alt=""></a>
                 </li>
-                <li>
+                <li class="presentation__rrss--item">
                     <a href=""><img src="" alt=""></a>
                 </li>
-                <li>
+                <li class="presentation__rrss--item">
                     <a href=""><img src="" alt=""></a>
                 </li>
-                <li>
+                <li class="presentation__rrss--item">
                     <a href=""><img src="" alt=""></a>
                 </li>
             </ul>
