Agregué las redes sociales en el header

--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
             <p class="presentation__phrase">"Less fear, more attitude" - "Menos miedo, más actitud"</p>
             <ul class="presentation__rrss">
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="" alt=""></a>
+                    <a href=""><img src="./assets/icons/mailto.svg" alt="Mailto"></a>
                 </li>
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="" alt=""></a>
+                    <a href=""><img src="./assets/icons/cv.svg" alt="Curriculum Vitae"></a>
                 </li>
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="" alt=""></a>
+                    <a href=""><img src="./assets/icons/LinkedinLogo.svg" alt=Linkedin"></a>
                 </li>
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="" alt=""></a>
+                    <a href=""><img src="./assets/icons/GithubLogo.svg" alt="Github"></a>
                 </li>
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="" alt=""></a>
+                    <a href=""><img src="./assets/icons/TwitterLogo.svg" alt="Twitter"></a>
                 </li>
             </ul>
         </div>
