Añadí la animación del scroll

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                     <a href=""><img src="./assets/icons/TwitterLogo.svg" alt="Twitter"></a>
                 </li>
             </ul>
+            <a class="scroll">
+                <p class="scroll__title">Scroll</p>
+                <span class="scroll__container">
+                </span>
+                <span class="scroll__container--point"></span>
+            </a>
         </div>
     </header>
 </body>
