Unifiqué la animación de scroll. Cambié los valores de la animcación para que quedaran más centrados.

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             </ul>
             <a class="scroll">
                 <p class="scroll__title">Scroll</p>
-                <span class="scroll__container">
-                </span>
-                <span class="scroll__container--point"></span>
+                <div class="scroll__container">
+                    <div class="scroll__container--point"></div>
+                </div>
             </a>
         </div>
     </header>
