--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
             </a>
         </div>
     </header>
+
+    <main>
+        <section class="about">
+            <h2 class="about__title">About Me</h2>
+            <img class="about__img" src="./assets/icons/Picture Profile.svg" alt="Profile picture">
+            <p class="about__description">Hi! I'm Jeisson, Colombian, self-taught,  tech lover and web developer in process.</p>
+            <button class="about__button">
+                <img src="./assets/icons/cv.svg" alt="Curriculum Vitae">
+                <p>Download CV</p>
+            </button>
+            <p>Skills</p>
+            <section></section>
+        </section>
+    </main>
 </body>
 
 </html>
