Disminuí el border de la anicamción de scroll. Agregué el título a los íconos de las redes sociales para cuando se haga hover. Alineé los elementos del about.

--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
             <p class="presentation__phrase">"Less fear, more attitude" - "Menos miedo, más actitud"</p>
             <ul class="presentation__rrss">
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="./assets/icons/mailto.svg" alt="Mailto"></a>
+                    <a href=""><img src="./assets/icons/mailto.svg" alt="Mailto" title="Enviar Email"></a>
                 </li>
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="./assets/icons/cv.svg" alt="Curriculum Vitae"></a>
+                    <a href=""><img src="./assets/icons/cv.svg" alt="Curriculum Vitae" title="Curriculum"></a>
                 </li>
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="./assets/icons/LinkedinLogo.svg" alt=Linkedin"></a>
+                    <a href=""><img src="./assets/icons/LinkedinLogo.svg" alt=Linkedin" title="Linkedin"></a>
                 </li>
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="./assets/icons/GithubLogo.svg" alt="Github"></a>
+                    <a href=""><img src="./assets/icons/GithubLogo.svg" alt="Github" title="Github"></a>
                 </li>
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="./assets/icons/TwitterLogo.svg" alt="Twitter"></a>
+                    <a href=""><img src="./assets/icons/TwitterLogo.svg" alt="Twitter" title="Twitter"></a>
                 </li>
             </ul>
             <a class="scroll">
@@ -80,7 +80,7 @@
     <main>
         <section class="about">
             <h2 class="about__title">About Me</h2>
-            <img class="about__img" src="./assets/icons/Picture Profile.svg" alt="Profile picture">
+            <img class="about__img" src="./assets/icons/picture-profile.svg" alt="Profile picture">
             <p class="about__description">Hi! I'm Jeisson, Colombian, self-taught,  tech lover and web developer in process.</p>
             <button class="about__button">
                 <img src="./assets/icons/cv.svg" alt="Curriculum Vitae">
