Estilicé la imagen de perfil, descripción y el botón

--- a/index.html
+++ b/index.html
@@ -83,11 +83,34 @@
             <img class="about__img" src="./assets/icons/picture-profile.svg" alt="Profile picture">
             <p class="about__description">Hi! I'm Jeisson, Colombian, self-taught,  tech lover and web developer in process.</p>
             <button class="about__button">
-                <img src="./assets/icons/cv.svg" alt="Curriculum Vitae">
-                <p>Download CV</p>
+                <img class="about__button--icon" src="./assets/icons/CTA-IdentificationBadge.svg" alt="Curriculum Vitae">
+                <p class="about__button--txt">Download CV</p>
             </button>
-            <p>Skills</p>
-            <section></section>
+            <section>
+                <h3>Skills</h3>
+                <section>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption></figcaption>
+                    </figure>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption></figcaption>
+                    </figure>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption></figcaption>
+                    </figure>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption></figcaption>
+                    </figure>
+                    <figure>
+                        <img src="" alt="">
+                        <figcaption></figcaption>
+                    </figure>
+                </section>
+            </section>
         </section>
     </main>
 </body>
