Agregué la sección de skills y la estilicé

--- a/index.html
+++ b/index.html
@@ -86,28 +86,28 @@
                 <img class="about__button--icon" src="./assets/icons/CTA-IdentificationBadge.svg" alt="Curriculum Vitae">
                 <p class="about__button--txt">Download CV</p>
             </button>
-            <section>
-                <h3>Skills</h3>
-                <section>
+            <section class="about__skills">
+                <h3 class="about__skills--title">Skills</h3>
+                <section class="about__skills--container">
                     <figure>
-                        <img src="" alt="">
-                        <figcaption></figcaption>
+                        <img src="./assets/icons/html.svg" alt="HTML Logo">
+                        <figcaption>HTML</figcaption>
                     </figure>
                     <figure>
-                        <img src="" alt="">
-                        <figcaption></figcaption>
+                        <img src="./assets/icons/css.svg" alt="CSS Logo">
+                        <figcaption>CSS</figcaption>
                     </figure>
                     <figure>
-                        <img src="" alt="">
-                        <figcaption></figcaption>
+                        <img src="./assets/icons/js-1.svg" alt="JavaScript Logo">
+                        <figcaption>JavaScript</figcaption>
                     </figure>
                     <figure>
-                        <img src="" alt="">
-                        <figcaption></figcaption>
+                        <img src="./assets/icons/git.svg" alt="Git Logo">
+                        <figcaption>Git</figcaption>
                     </figure>
                     <figure>
-                        <img src="" alt="">
-                        <figcaption></figcaption>
+                        <img src="./assets/icons/figma.svg" alt="Figma Logo">
+                        <figcaption>Figma</figcaption>
                     </figure>
                 </section>
             </section>
