Añadí las estrucutra base para la sección de portafolio

--- a/index.html
+++ b/index.html
@@ -112,6 +112,29 @@
                 </section>
             </section>
         </section>
+        <section class="portfolio">
+            <h2 class="portfolio__title"></h2>
+            <section class="portfolio__item">
+                <a href="">
+                    <img src="" alt="">
+                </a>
+            </section>
+            <section class="portfolio__item">
+                <a href="">
+                    <img src="" alt="">
+                </a>
+            </section>
+            <section class="portfolio__item">
+                <a href="">
+                    <img src="" alt="">
+                </a>
+            </section>
+            <section class="portfolio__item">
+                <a href="">
+                    <img src="" alt="">
+                </a>
+            </section>
+        </section>
     </main>
 </body>
 
