--- a/index.html
+++ b/index.html
@@ -13,40 +13,41 @@
 </head>
 
 <body>
-    <header class="intro">
-        <div class="navbar">
-            <div class="navbar__head">
-                <input id="menu_on-off" name="menu_on-off" type="checkbox">
-                <label class="navbar__toggle-button" for="menu_on-off">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </label>
-                <a class="navbar__name" href="/">
-                    <img class="navbar__name--logo" src="./assets/icons/Logo.svg" alt="Logo">
-                    <p class="navbar__name--title"> Jeisson Fonseca</p>
-                </a>
-                <nav class="navbar__menu">
-                    <ul class="navbar__menu--list">
-                        <li class="navbar__menu--list-item">
-                            <a href="#">Home</a>
-                        </li>
-                        <li class="navbar__menu--list-item">
-                            <a href="#">About</a>
-                        </li>
-                        <li class="navbar__menu--list-item">
-                            <a href="#">Portfolio</a>
-                        </li>
-                        <li class="navbar__menu--list-item">
-                            <a href="#">Blog</a>
-                        </li>
-                        <li class="navbar__menu--list-item">
-                            <a href="#">Contact</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+    <div class="navbar">
+        <div class="navbar__head">
+            <input id="menu_on-off" name="menu_on-off" type="checkbox">
+            <label class="navbar__toggle-button" for="menu_on-off">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+            <a class="navbar__name" href="/">
+                <img class="navbar__name--logo" src="./assets/icons/Logo.svg" alt="Logo">
+                <p class="navbar__name--title"> Jeisson Fonseca</p>
+            </a>
+            <nav class="navbar__menu">
+                <ul class="navbar__menu--list">
+                    <li class="navbar__menu--list-item">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="navbar__menu--list-item">
+                        <a href="#">About</a>
+                    </li>
+                    <li class="navbar__menu--list-item">
+                        <a href="#">Portfolio</a>
+                    </li>
+                    <li class="navbar__menu--list-item">
+                        <a href="#">Blog</a>
+                    </li>
+                    <li class="navbar__menu--list-item">
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
+    </div>
+    <header class="intro">
+        
         <div class="presentation">
             <img class="presentation__avatar" src="./assets/icons/CuteAvatar.svg" alt="Avatar">
             <h1 class="presentation__title">Frontend Developer</h1>
@@ -113,29 +114,38 @@
             </section>
         </section>
         <section class="portfolio">
-            <h2 class="portfolio__title"></h2>
-            <section class="portfolio__item">
-                <a href="">
-                    <img src="" alt="">
-                </a>
-            </section>
-            <section class="portfolio__item">
-                <a href="">
-                    <img src="" alt="">
-                </a>
-            </section>
-            <section class="portfolio__item">
-                <a href="">
-                    <img src="" alt="">
-                </a>
-            </section>
-            <section class="portfolio__item">
-                <a href="">
-                    <img src="" alt="">
-                </a>
+            <h2 class="portfolio__title">Portfolio</h2>
+            <section class="portfolio__container">
+                <section class="portfolio__container--item">
+                    <a href="/">
+                        <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
+                        <div>
+                            <p>My Landing Page</p>
+                            <p>This page shows my projects</p>
+                            <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
+                            <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
+                            <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
+                        </div>
+                    </a>
+                </section>
+                <section class="portfolio__container--item">
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </section>
+                <section class="portfolio__container--item">
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </section>
+                <section class="portfolio__container--item">
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </section>
             </section>
         </section>
     </main>
 </body>
 
-</html>
+</html>  
