Agregué el correo al ícono del MailTo

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p class="presentation__phrase">"Less fear, more attitude" - "Menos miedo, más actitud"</p>
             <ul class="presentation__rrss">
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="./assets/icons/mailto.svg" alt="Mailto" title="Enviar Email"></a>
+                    <a href="mailto:jstevenfm@gmail.com"><img src="./assets/icons/mailto.svg" alt="Mailto" title="Enviar Email"></a>
                 </li>
                 <li class="presentation__rrss--item">
                     <a href=""><img src="./assets/icons/cv.svg" alt="Curriculum Vitae" title="Curriculum"></a>
