Cambié las etiquetas de los contenedores de la impágenes en la sección de portfolio

--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
         </div>
     </div>
     <header class="intro">
-        
+
         <div class="presentation">
             <img class="presentation__avatar" src="./assets/icons/CuteAvatar.svg" alt="Avatar">
             <h1 class="presentation__title">Frontend Developer</h1>
             <p class="presentation__phrase">"Less fear, more attitude" - "Menos miedo, más actitud"</p>
             <ul class="presentation__rrss">
                 <li class="presentation__rrss--item">
-                    <a href="mailto:jstevenfm@gmail.com"><img src="./assets/icons/mailto.svg" alt="Mailto" title="Enviar Email"></a>
+                    <a href="mailto:jstevenfm@gmail.com"><img src="./assets/icons/mailto.svg" alt="Mailto"
+                            title="Enviar Email"></a>
                 </li>
                 <li class="presentation__rrss--item">
                     <a href=""><img src="./assets/icons/cv.svg" alt="Curriculum Vitae" title="Curriculum"></a>
@@ -82,9 +83,11 @@
         <section class="about">
             <h2 class="about__title">About Me</h2>
             <img class="about__img" src="./assets/icons/picture-profile.svg" alt="Profile picture">
-            <p class="about__description">Hi! I'm Jeisson, Colombian, self-taught,  tech lover and web developer in process.</p>
+            <p class="about__description">Hi! I'm Jeisson, Colombian, self-taught,  tech lover and web developer in
+                process.</p>
             <button class="about__button">
-                <img class="about__button--icon" src="./assets/icons/CTA-IdentificationBadge.svg" alt="Curriculum Vitae">
+                <img class="about__button--icon" src="./assets/icons/CTA-IdentificationBadge.svg"
+                    alt="Curriculum Vitae">
                 <p class="about__button--txt">Download CV</p>
             </button>
             <section class="about__skills">
@@ -116,36 +119,28 @@
         <section class="portfolio">
             <h2 class="portfolio__title">Portfolio</h2>
             <section class="portfolio__container">
-                <section class="portfolio__container--item">
-                    <a href="/">
-                        <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
-                        <div>
-                            <p>My Landing Page</p>
-                            <p>This page shows my projects</p>
-                            <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
-                            <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
-                            <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
-                        </div>
-                    </a>
-                </section>
-                <section class="portfolio__container--item">
-                    <a href="">
-                        <img src="" alt="">
-                    </a>
-                </section>
-                <section class="portfolio__container--item">
-                    <a href="">
-                        <img src="" alt="">
-                    </a>
-                </section>
-                <section class="portfolio__container--item">
-                    <a href="">
-                        <img src="" alt="">
-                    </a>
-                </section>
+                <figure href="/" class="portfolio__container--item">
+                    <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
+                    <figcaption>
+                        <h3>My Landing Page</h3>
+                        <p>This page shows my projects</p>
+                        <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
+                        <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
+                        <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
+                    </figcaption>
+                </figure>
+                <figure hre="/" class="portfolio__container--item">
+                    <img src="" alt="">
+                </figure>
+                <figure hre="/" class="portfolio__container--item">
+                    <img src="" alt="">
+                </figure>
+                <figure hre="/" class="portfolio__container--item">
+                    <img src="" alt="">
+                </figure>
             </section>
         </section>
     </main>
 </body>
 
-</html>  
+</html>
