Estilé el figcaption para que aparezca la descripción de los proyectos

--- a/index.html
+++ b/index.html
@@ -129,14 +129,35 @@
                         <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
                     </figcaption>
                 </figure>
-                <figure hre="/" class="portfolio__container--item">
-                    <img src="" alt="">
+                <figure href="/" class="portfolio__container--item">
+                    <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
+                    <figcaption>
+                        <h3>My Landing Page</h3>
+                        <p>This page shows my projects</p>
+                        <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
+                        <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
+                        <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
+                    </figcaption>
                 </figure>
-                <figure hre="/" class="portfolio__container--item">
-                    <img src="" alt="">
+                <figure href="/" class="portfolio__container--item">
+                    <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
+                    <figcaption>
+                        <h3>My Landing Page</h3>
+                        <p>This page shows my projects</p>
+                        <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
+                        <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
+                        <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
+                    </figcaption>
                 </figure>
-                <figure hre="/" class="portfolio__container--item">
-                    <img src="" alt="">
+                <figure href="/" class="portfolio__container--item">
+                    <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
+                    <figcaption>
+                        <h3>My Landing Page</h3>
+                        <p>This page shows my projects</p>
+                        <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
+                        <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
+                        <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
+                    </figcaption>
                 </figure>
             </section>
         </section>
