Agregué los id para vincularlos con las secciones de la barra de navegación

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <nav class="navbar__menu">
                 <ul class="navbar__menu--list">
                     <li class="navbar__menu--list-item">
-                        <a href="#">Home</a>
+                        <a href="#home">Home</a>
                     </li>
                     <li class="navbar__menu--list-item">
-                        <a href="#">About</a>
+                        <a href="#about">About</a>
                     </li>
                     <li class="navbar__menu--list-item">
-                        <a href="#">Portfolio</a>
+                        <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="navbar__menu--list-item">
                         <a href="#">Blog</a>
@@ -48,7 +48,7 @@
     </div>
     <header class="intro">
 
-        <div class="presentation">
+        <div id="home" class="presentation">
             <img class="presentation__avatar" src="./assets/icons/CuteAvatar.svg" alt="Avatar">
             <h1 class="presentation__title">Frontend Developer</h1>
             <p class="presentation__phrase">"Less fear, more attitude" - "Menos miedo, más actitud"</p>
@@ -80,7 +80,7 @@
     </header>
 
     <main>
-        <section class="about">
+        <section id="about" class="about">
             <h2 class="about__title">About Me</h2>
             <img class="about__img" src="./assets/icons/picture-profile.svg" alt="Profile picture">
             <p class="about__description">Hi! I'm Jeisson, Colombian, self-taught,  tech lover and web developer in
@@ -116,7 +116,7 @@
                 </section>
             </section>
         </section>
-        <section class="portfolio">
+        <section id="portfolio" class="portfolio">
             <h2 class="portfolio__title">Portfolio</h2>
             <section class="portfolio__container">
                 <figure href="/" class="portfolio__container--item">
