--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                 </section>
             </section>
         </section>
+
         <section id="portfolio" class="portfolio">
             <h2 class="portfolio__title">Portfolio</h2>
             <section class="portfolio__container">
@@ -157,6 +158,19 @@
                         <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
                         <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
                         <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
+                    </figcaption>
+                </figure>
+            </section>
+        </section>
+
+        <section id="blog" class="blog">
+            <h2 class="blog__title">Blog</h2>
+            <section class="blog__container">
+                <figure class="blog__container--item">
+                    <img src="" alt="">
+                    <figcaption>
+                        <h3>Primer blog</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </figcaption>
                 </figure>
             </section>
