Agregué estilos a la sección del blog

--- a/index.html
+++ b/index.html
@@ -173,6 +173,27 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </figcaption>
                 </figure>
+                <figure class="blog__container--item">
+                    <img src="" alt="">
+                    <figcaption>
+                        <h3>Primer blog</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </figcaption>
+                </figure>
+                <figure class="blog__container--item">
+                    <img src="" alt="">
+                    <figcaption>
+                        <h3>Primer blog</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </figcaption>
+                </figure>
+                <figure class="blog__container--item">
+                    <img src="" alt="">
+                    <figcaption>
+                        <h3>Primer blog</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </figcaption>
+                </figure>
             </section>
         </section>
     </main>
