--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <main>
         <section id="about" class="about">
-            <h2 class="about__title">About Me</h2>
+            <h2 class="about__title titles-section">About Me</h2>
             <img class="about__img" src="./assets/icons/picture-profile.svg" alt="Profile picture">
             <p class="about__description">Hi! I'm Jeisson, Colombian, self-taught,  tech lover and web developer in
                 process.</p>
@@ -118,9 +118,9 @@
         </section>
 
         <section id="portfolio" class="portfolio">
-            <h2 class="portfolio__title">Portfolio</h2>
-            <section class="portfolio__container">
-                <figure href="/" class="portfolio__container--item">
+            <h2 class="portfolio__title titles-section">Portfolio</h2>
+            <section class="portfolio__container containers-sections">
+                <figure href="/" class="portfolio__container--item containers-sections__item">
                     <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
                     <figcaption>
                         <h3>My Landing Page</h3>
@@ -130,7 +130,7 @@
                         <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
                     </figcaption>
                 </figure>
-                <figure href="/" class="portfolio__container--item">
+                <figure href="/" class="portfolio__container--item containers-sections__item">
                     <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
                     <figcaption>
                         <h3>My Landing Page</h3>
@@ -140,7 +140,7 @@
                         <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
                     </figcaption>
                 </figure>
-                <figure href="/" class="portfolio__container--item">
+                <figure href="/" class="portfolio__container--item containers-sections__item">
                     <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
                     <figcaption>
                         <h3>My Landing Page</h3>
@@ -150,7 +150,7 @@
                         <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
                     </figcaption>
                 </figure>
-                <figure href="/" class="portfolio__container--item">
+                <figure href="/" class="portfolio__container--item containers-sections__item">
                     <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
                     <figcaption>
                         <h3>My Landing Page</h3>
@@ -164,30 +164,30 @@
         </section>
 
         <section id="blog" class="blog">
-            <h2 class="blog__title">Blog</h2>
-            <section class="blog__container">
-                <figure class="blog__container--item">
+            <h2 class="blog__title titles-section">Blog</h2>
+            <section class="blog__container blog__container">
+                <figure class="blog__container--item containers-sections__item">
                     <img src="" alt="">
                     <figcaption>
                         <h3>Primer blog</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </figcaption>
                 </figure>
-                <figure class="blog__container--item">
+                <figure class="blog__container--item containers-sections__item">
                     <img src="" alt="">
                     <figcaption>
                         <h3>Primer blog</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </figcaption>
                 </figure>
-                <figure class="blog__container--item">
+                <figure class="blog__container--item containers-sections__item">
                     <img src="" alt="">
                     <figcaption>
                         <h3>Primer blog</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </figcaption>
                 </figure>
-                <figure class="blog__container--item">
+                <figure class="blog__container--item containers-sections__item">
                     <img src="" alt="">
                     <figcaption>
                         <h3>Primer blog</h3>
