Agregué sección de contacto Vinculé las secciones contacto y blog al navbar

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="navbar__menu--list-item">
-                        <a href="#">Blog</a>
+                        <a href="#blog">Blog</a>
                     </li>
                     <li class="navbar__menu--list-item">
-                        <a href="#">Contact</a>
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -80,6 +80,7 @@
     </header>
 
     <main>
+
         <section id="about" class="about">
             <h2 class="about__title titles-section">About Me</h2>
             <img class="about__img" src="./assets/icons/picture-profile.svg" alt="Profile picture">
@@ -195,6 +196,12 @@
                     </figcaption>
                 </figure>
             </section>
+        </section>
+
+        <section id="contact" class="contact">
+            <h2 class="contact__title titles-section">Get In Touch</h2>
+            <p class="contact__phrase">Let's talk about everything</p>
+            
         </section>
     </main>
 </body>
