Agregué clase global para los estilos compartidos de las secciones

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </section>
         </section>
 
-        <section id="portfolio" class="portfolio">
+        <section id="portfolio" class="portfolio sections">
             <h2 class="portfolio__title titles-section">Portfolio</h2>
             <section class="portfolio__container containers-sections">
                 <figure href="/" class="portfolio__container--item containers-sections__item">
@@ -164,7 +164,7 @@
             </section>
         </section>
 
-        <section id="blog" class="blog">
+        <section id="blog" class="blog sections">
             <h2 class="blog__title titles-section">Blog</h2>
             <section class="blog__container blog__container">
                 <figure class="blog__container--item containers-sections__item">
@@ -198,7 +198,7 @@
             </section>
         </section>
 
-        <section id="contact" class="contact">
+        <section id="contact" class="contact sections">
             <h2 class="contact__title titles-section">Get In Touch</h2>
             <p class="contact__phrase">Let's talk about everything</p>
             
