Corregí la clase que permite tener centrada los items de la sección blog

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
         <section id="blog" class="blog sections">
             <h2 class="blog__title titles-section">Blog</h2>
-            <section class="blog__container blog__container">
+            <section class="blog__container containers-sections">
                 <figure class="blog__container--item containers-sections__item">
                     <img src="" alt="">
                     <figcaption>
