Agregué el apartado de comunicación en la sección de contacto.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </button>
             <section class="about__skills">
                 <h3 class="about__skills--title">Skills</h3>
-                <section class="about__skills--container">
+                <section class="about__skills--container block-container">
                     <figure>
                         <img src="./assets/icons/html.svg" alt="HTML Logo">
                         <figcaption>HTML</figcaption>
@@ -220,6 +220,28 @@
                 </label>
                 <button type="submit" class="contact__form--button button">Send Message</button>
             </form>
+            <section class="contact__links block-container">
+                <figure>
+                    <img src="./assets/icons/mailto.svg" alt="Mailto Logo">
+                    <figcaption>Mailto</figcaption>
+                </figure>
+                <figure>
+                    <img src="./assets/icons/cv.svg" alt="CV Logo">
+                    <figcaption>CV</figcaption>
+                </figure>
+                <figure>
+                    <img src="./assets/icons/LinkedinLogo.svg" alt="LinkedIn Logo">
+                    <figcaption>LinkedIn</figcaption>
+                </figure>
+                <figure>
+                    <img src="./assets/icons/GithubLogo.svg" alt="Github Logo">
+                    <figcaption>Github</figcaption>
+                </figure>
+                <figure>
+                    <img src="./assets/icons/TwitterLogo.svg" alt="Twitter Logo">
+                    <figcaption>Twitter</figcaption>
+                </figure>
+            </section>
         </section>
     </main>
 </body>
