Agregué y estilé el footer

--- a/index.html
+++ b/index.html
@@ -245,5 +245,7 @@
         </section>
     </main>
 </body>
-
+<footer>
+    <p>Designed and Developed by Jeisson Fonseca © 2022</p>
+</footer>
 </html>
