Agregué la etiqueta de enlaces a los items de la sección portfolio

--- a/index.html
+++ b/index.html
@@ -121,46 +121,54 @@
         <section id="portfolio" class="portfolio sections">
             <h2 class="portfolio__title titles-section">Portfolio</h2>
             <section class="portfolio__container containers-sections">
-                <figure href="/" class="portfolio__container--item containers-sections__item">
-                    <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
-                    <figcaption>
-                        <h3>My Landing Page</h3>
-                        <p>This page shows my projects</p>
-                        <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
-                        <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
-                        <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
-                    </figcaption>
-                </figure>
-                <figure href="/" class="portfolio__container--item containers-sections__item">
-                    <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
-                    <figcaption>
-                        <h3>My Landing Page</h3>
-                        <p>This page shows my projects</p>
-                        <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
-                        <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
-                        <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
-                    </figcaption>
-                </figure>
-                <figure href="/" class="portfolio__container--item containers-sections__item">
-                    <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
-                    <figcaption>
-                        <h3>My Landing Page</h3>
-                        <p>This page shows my projects</p>
-                        <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
-                        <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
-                        <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
-                    </figcaption>
-                </figure>
-                <figure href="/" class="portfolio__container--item containers-sections__item">
-                    <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
-                    <figcaption>
-                        <h3>My Landing Page</h3>
-                        <p>This page shows my projects</p>
-                        <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
-                        <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
-                        <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
-                    </figcaption>
-                </figure>
+                <a href="/">
+                    <figure class="portfolio__container--item containers-sections__item">
+                        <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
+                        <figcaption>
+                            <h3>My Landing Page</h3>
+                            <p>This page shows my projects</p>
+                            <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
+                            <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
+                            <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="">
+                    <figure class="portfolio__container--item containers-sections__item">
+                        <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
+                        <figcaption>
+                            <h3>My Landing Page</h3>
+                            <p>This page shows my projects</p>
+                            <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
+                            <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
+                            <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="">
+                    <figure class="portfolio__container--item containers-sections__item">
+                        <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
+                        <figcaption>
+                            <h3>My Landing Page</h3>
+                            <p>This page shows my projects</p>
+                            <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
+                            <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
+                            <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="">
+                    <figure class="portfolio__container--item containers-sections__item">
+                        <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
+                        <figcaption>
+                            <h3>My Landing Page</h3>
+                            <p>This page shows my projects</p>
+                            <img src="./assets/icons/figma.svg" alt="Figma Logo" title="Figma">
+                            <img src="./assets/icons/html.svg" alt="HTML Logo" title="HTML">
+                            <img src="./assets/icons/css.svg" alt="CSS Logo" title="CSS">
+                        </figcaption>
+                    </figure>
+                </a>
             </section>
         </section>
 
